# preprocessing

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  out_dual.csv  out_segments.csv  pyproject.toml
clean_datasets/: reviews_part_3.csv
labels/: labels.yaml
scripts/: clean_reviews.py
src/labelicious/: cli.py  config.py  dataset_io.py  labeler.py  llm_client.py  prompts.py  schema.py  self_consistency.py
src/preprocessing/: cli.py  config.py  dataset_io.py  labeler.py  llm_client.py  prompts.py  schema.py
tests/: test_schema.py
